frontik (2.12.0~dev) unstable; urgency=low

  * new itearation
  * copy.deepcopy on xml before xslt
  * queue.get with tiemout in jobs.py
  * test_integration_non_debug_mode.test_basic_auth_fail_on_wrong_pass fixed

 -- Pavel Trukhanov <p.trukhanov@hh.ru>  Thu, 22 Mar 2012 15:53:16 +0400

frontik (2.11.0) unstable; urgency=low

  [ Vasily Katraev ]
  * python 2.7 support

  [ Georgiy Danschin ]
  * HH-23510 syslog fix 

  [ Pavel Trukhanov ]
  * cache limit per app impl
  * applying xslt in thread pool

 -- Pavel Trukhanov <p.trukhanov@hh.ru>  Thu, 22 Dec 2011 17:14:07 +0300

frontik (2.10.0) unstable; urgency=low

  [ Pavel Trukhanov ]
  * cdata stripping disabled
  * mistypping fixed
  * response parse error handling refactored
  * syslog facility option added
  * fast_tests

  [ Vasily Katraev ]
  * HH-22355 headers for allowed methods added and some logging
  * HH-22355 405 with allow headers for put, options, delete added
  * HH-19902 version handler and  version bump added
  * HH-22780 tests for exceptions with any codes
  * HH-21436 cleanup xscript functions

  [ Georgiy Danschin ]
  * HH-16162 Syslog message length maximum limit

 -- Vasily Katraev (hh.ru) <v.katraev@hh.ru>  Tue, 15 Nov 2011 14:13:59 +0300

frontik (2.9.0) unstable; urgency=low

  [ Pavel Trukhanov ]
  * HH-19174 common timeouts multiplier impl 
  * HH-13736 fix url dispatchin and some new tests 
  * HH-18871 default suppressed httpclient logger actualized
  * HH-19227 mutable default values cleaned 
  * HH-18673 "200 ok" status for debug page always

  [ Ivan Fedorov ]
  * HH-20190 Import original adisp 
  * HH-20148 return HTTP-code 405 for not implemented methods in pages
  * HH-19491 remove old release script
  * HH-20190 adisp support  

  [ Andrey Tatarinov ]
  * drop python-tornado (< 2) dependency

  [ Vasily Katraev ]
  * HH-20427 Syntax error in magic import + unit test for it 
  * HH-20629 ENCODE_TEMPLATE fix + test cover and additional tests